fix: Deadline wrong color (#30)

--- a/Ticky.Web/app.css
+++ b/Ticky.Web/app.css
@@ -165,11 +165,7 @@ option {
     @apply bg-modal;
 }
 
-<<<<<<< fix/storing-time
-[data-theme='dark'] html {
-=======
 html[data-theme='dark'] {
->>>>>>> main
     color-scheme: dark;
 }
 
